--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-app",
+  "name": "weimar-republic",
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
@@ -24,6 +24,7 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "sirv-cli": "^1.0.0"
   }
 }
